# tts-server

./: .env.example  .gitignore  Cargo.toml
.cargo/: config.toml
scripts/: install.sh  update.sh
src/: main.rs
test/: package.json  pnpm-lock.yaml  tts-test.ts
