[package]
name = "tts-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tts-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio encoding (WAV)
hound = "3"

# Unique IDs for messages
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# .env file support
dotenvy = "0.15"

# Base64 for audio payload
base64 = "0.22"

# Text sanitization (regex patterns for TTS preprocessing)
regex = "1"
once_cell = "1"

# Kokoro TTS (Rust/ONNX)
# Requires espeak-ng installed: brew install espeak-ng
# Requires model files: checkpoints/kokoro-v1.0.onnx + data/voices-v1.0.bin
kokoros = { git = "https://github.com/lucasjinreal/Kokoros", package = "kokoros" }
